--- a/ClusterKit.Monitoring/ClusterKit.Monitoring/packages.config
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring/packages.config
@@ -2,16 +2,17 @@
 <packages>
   <package id="Akka" version="1.0.6" targetFramework="net45" />
   <package id="Akka.Cluster" version="1.0.6.17-beta" targetFramework="net45" />
+  <package id="Akka.Cluster.Tools" version="1.0.6" targetFramework="net45" />
   <package id="Akka.DI.CastleWindsor" version="1.0.6" targetFramework="net45" />
   <package id="Akka.DI.Core" version="1.0.6" targetFramework="net45" />
   <package id="Akka.Logger.Serilog" version="1.0.6" targetFramework="net45" />
   <package id="Akka.Remote" version="1.0.6" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
-  <package id="ClusterKit.Core" version="0.0.0.68-master" targetFramework="net45" />
+  <package id="ClusterKit.Core" version="0.0.0.77-master" targetFramework="net45" />
   <package id="ClusterKit.Web" version="0.0.0.68-master" targetFramework="net45" />
-  <package id="ClusterKit.Web.Client" version="0.0.0.68-master" targetFramework="net45" />
-  <package id="ClusterKit.Web.SignalR" version="0.0.0.68-master" targetFramework="net45" />
+  <package id="ClusterKit.Web.Client" version="0.0.0.77-master" targetFramework="net45" />
+  <package id="ClusterKit.Web.SignalR" version="0.0.0.77-master" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
   <package id="Helios" version="1.4.2" targetFramework="net45" />
@@ -20,7 +21,6 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net46" />
-  <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.2" targetFramework="net46" />
   <package id="Microsoft.AspNet.SignalR.Utils" version="2.2.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net46" />
