--- a/ClusterKit.Core/ClusterKit.Core.Service/App.config
+++ b/ClusterKit.Core/ClusterKit.Core.Service/App.config
@@ -9,6 +9,9 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
+  <system.web>
+    <customErrors mode="Off" />
+  </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
