--- a/ClusterKit.Core/ClusterKit.Core.TestKit/ClusterKit.Core.TestKit.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.TestKit/ClusterKit.Core.TestKit.csproj
@@ -182,10 +182,12 @@
     <Compile Include="HackedBaseActorTest.cs" />
     <Compile Include="IMessageWithPath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoteTestMessage.cs" />
     <Compile Include="TestActorForwarder.cs" />
     <Compile Include="TestConfigurator.cs" />
     <Compile Include="TestMailbox.cs" />
     <Compile Include="TestMessage.cs" />
+    <Compile Include="TestMessageRouter.cs" />
     <Compile Include="TestWithSerilog.cs" />
     <Compile Include="TimeMachineScheduler.cs" />
     <Compile Include="Installer.cs" />
