--- a/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
+++ b/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
@@ -134,6 +134,8 @@
       <DependentUpon>Configuration.resx</DependentUpon>
     </Compile>
     <Compile Include="EnActorType.cs" />
+    <Compile Include="IMessageRouter.cs" />
+    <Compile Include="MessageRouter.cs" />
     <Compile Include="NameSpaceActor.cs" />
     <Compile Include="Ping\PingActor.cs" />
     <Compile Include="Ping\PingMessage.cs" />
