--- a/Docker/ClusterKitMonitoring/web/package.json
+++ b/Docker/ClusterKitMonitoring/web/package.json
@@ -27,8 +27,8 @@
     "start": "concurrent --kill-others \"npm run start-prod\" \"npm run start-prod-api\"",
     "start-prod": "better-npm-run start-prod",
     "start-prod-api": "better-npm-run start-prod-api",
-    "build": "webpack --verbose --colors --display-error-details --config webpack/prod.config.js",
-    "postinstall": "webpack --display-error-details --config webpack/prod.config.js",
+    "build": "better-npm-run build",
+    "postinstall": "npm run build",
     "lint": "eslint -c .eslintrc src api",
     "start-dev": "better-npm-run start-dev",
     "start-dev-api": "better-npm-run start-dev-api",
@@ -77,19 +77,37 @@
       "command": "node webpack/webpack-dev-server.js",
       "env": {
         "UV_THREADPOOL_SIZE": 100,
-        "NODE_PATH": "./src"
+        "NODE_PATH": "./src",
+        "PORT": 3000,
+        "APIPORT": 3030
+      }
+    },
+    "build": {
+      "command": "webpack --verbose --colors --display-error-details --config webpack/prod.config.js",
+      "env": {
+        "NODE_ENV": "production"
       }
     }
   },
   "dependencies": {
-    "babel": "~5.8.29",
-    "babel-plugin-typecheck": "^2.0.0",
+    "babel-core": "^6.5.2",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-display-name": "^6.3.13",
+    "babel-plugin-transform-runtime": "^6.3.13",
+    "babel-polyfill": "^6.3.14",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-register": "^6.3.13",
+    "babel-runtime": "^6.3.19",
     "body-parser": "^1.14.1",
     "compression": "^1.6.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "file-loader": "^0.8.5",
-    "history": "1.17.0",
+    "hoist-non-react-statics": "^1.0.3",
     "http-proxy": "^1.12.0",
     "invariant": "^2.2.0",
     "less": "^2.5.3",
@@ -99,20 +117,19 @@
     "multireducer": "^2.0.0",
     "piping": "^0.3.0",
     "pretty-error": "^1.2.0",
-    "query-string": "^3.0.0",
     "react": "^0.14.2",
     "react-bootstrap": "^0.28.1",
-    "react-datagrid": "^2.0.2",
     "react-dom": "^0.14.1",
     "react-helmet": "^2.2.0",
     "react-inline-css": "^2.0.0",
     "react-redux": "^4.0.0",
-    "react-router": "1.0.3",
-    "react-router-bootstrap": "^0.19.3",
+    "react-router": "2.0.0",
+    "react-router-bootstrap": "^0.20.1",
+    "react-router-redux": "^3.0.0",
     "redux": "^3.0.4",
+    "redux-async-connect": "^1.0.0-rc2",
     "redux-form": "^3.0.12",
-    "redux-router": "1.0.0-beta5",
-    "scroll-behavior": "^0.3.0",
+    "scroll-behavior": "^0.3.2",
     "serialize-javascript": "^1.1.2",
     "serve-favicon": "^2.3.0",
     "socket.io": "^1.3.7",
@@ -124,28 +141,26 @@
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel-core": "~5.8.33",
-    "babel-eslint": "^4.1.3",
-    "babel-loader": "~5.3.3",
-    "babel-plugin-react-transform": "~1.1.1",
-    "babel-runtime": "~5.8.29",
-    "better-npm-run": "^0.0.4",
+    "babel-eslint": "^5.0.0-beta6",
+    "babel-plugin-react-transform": "^2.0.0",
+    "babel-plugin-typecheck": "^3.6.0",
+    "better-npm-run": "0.0.8",
     "bootstrap-sass": "^3.3.5",
     "bootstrap-sass-loader": "^1.0.9",
     "chai": "^3.3.0",
+    "clean-webpack-plugin": "^0.1.6",
     "concurrently": "^0.1.1",
+    "css-loader": "^0.23.1",
     "eslint": "1.10.3",
     "eslint-config-airbnb": "0.1.0",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-import": "^0.8.0",
     "eslint-plugin-react": "^3.5.0",
-    "clean-webpack-plugin": "^0.1.6",
-    "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^0.9.1",
     "font-awesome": "^4.4.0",
     "font-awesome-webpack": "0.0.4",
-    "karma": "^0.13.10",
     "json-loader": "^0.5.4",
+    "karma": "^0.13.10",
     "karma-cli": "^0.1.1",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.1.1",
@@ -153,8 +168,8 @@
     "karma-sourcemap-loader": "^0.3.5",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.3.3",
-    "phantomjs": "^1.9.18",
     "node-sass": "^3.4.2",
+    "phantomjs": "^1.9.18",
     "phantomjs-polyfill": "0.0.1",
     "react-a11y": "^0.2.6",
     "react-addons-test-utils": "^0.14.0",
@@ -174,6 +189,6 @@
     "webpack-hot-middleware": "^2.5.0"
   },
   "engines": {
-    "node": "4.1.1"
+    "node": "5.6.0"
   }
 }
